@@ -1,4 +1,4 @@
 @set UPDATED 23 July 2005
 @set UPDATED-MONTH July 2005
-@set EDITION 2.1.6
-@set VERSION 2.1.6
+@set EDITION 2.2.0
+@set VERSION 2.2.0
